fix submitting inventory

--- a/iaroapp/templates/registration/login.html
+++ b/iaroapp/templates/registration/login.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     {% load static %}
     <link rel="stylesheet" href="{% static 'css/styles.css' %}">
-    <link href="{% static 'css/bootstrap-5.3.min.css' %}" rel="stylesheet">
+    <link href="{% static 'bootstrap/dist/css/bootstrap.min.css' %}" rel="stylesheet">
     <link rel="icon" href="{% static 'images/favicon.png' %}">
     <style>
 
@@ -115,6 +115,6 @@
 
     </div>
 
-    <script src="{% static 'js/bootstrap.bundle-5.3.min.js' %}"></script>
+    <script src="{% static 'bootstrap/dist/js/bootstrap.bundle.min.js' %}"></script>
   </body>
 </html>
