better checkbox styling on shopping and packaging list

--- a/inventory/templates/inventory_packaging.html
+++ b/inventory/templates/inventory_packaging.html
@@ -111,7 +111,7 @@
     overflow-wrap: anywhere;
   }
   td:first-child {
-    padding: 0.8rem !important;
+    padding: 0.8rem 0 0.8rem 1.5rem !important;
   }
   .badge {
     display: flex;
