--- a/tasks/templates/tasks_add.html
+++ b/tasks/templates/tasks_add.html
@@ -18,5 +18,8 @@
     button {
         max-width: 150px;
     }
+    #div_id_summary label {
+        display: inherit !important;
+    }
 </style>
 {% endblock %}
