add new tasks as staff user

--- a/iaroapp/templates/base_generic.html
+++ b/iaroapp/templates/base_generic.html
@@ -18,7 +18,7 @@
 <body>
 
 <header class="navbar navbar-dark sticky-top bg-dark flex-md-nowrap p-0 shadow">
-    <a class="navbar-brand col-md-3 col-lg-2 me-0 px-3 fs-6" href="#">iaroapp</a>
+    <a class="navbar-brand col-md-3 col-lg-2 me-0 px-3 fs-6" href="/">iaroapp</a>
     <div class="navbar-nav">
         {% if user.is_superuser %}
         <div class="nav-item text-nowrap">
