--- a/tasks/templates/tasks.html
+++ b/tasks/templates/tasks.html
@@ -6,7 +6,7 @@
       <div>
         <h1 class="h2">Open Tasks</h1>
       </div>
-      {% if user.is_superuser %}
+      {% if user.is_superuser or user.is_staff %}
       <a class="btn btn-primary" href="/tasks/add">
         Add task
       </a>
@@ -154,7 +154,7 @@
           }
           window.scrollTo(0, 0);
         }
-        request.open('POST', '/tasks/overview');
+        request.open('POST', '/tasks/');
         request.setRequestHeader("X-CSRFToken", csrftoken);
         request.setRequestHeader("Content-Type", "application/json;charset=UTF-8");
         request.send(JSON.stringify(objSerializedForm));
