--- a/tasks/templates/tasks.html
+++ b/tasks/templates/tasks.html
@@ -28,20 +28,19 @@
     <div class="list-group w-auto">
     
       {% for task in task_list %}
-        {% if task.date_done == undefined or task.date_done|date:"Y-m-d" != today|date:"Y-m-d" %}
-        <label class="list-group-item d-flex gap-3">
+        <label class="list-group-item d-flex gap-3 {% if task.done %}done{% endif %}">
           <fieldset>
-            <input class="form-check-input flex-shrink-0" type="checkbox" style="font-size: 1.375em;" name="done" />
+            <input class="form-check-input flex-shrink-0" type="checkbox" style="font-size: 1.375em;" name="done" {% if task.done %}checked disabled{% endif %} />
             <input type="number" name="id" value="{{task.id}}" style="display: none;" />
           </fieldset>
           <span class="pt-1 form-checked-content">
-            {{ task.title }}
+            {{ task.title }}<br>
             <small class="d-block text-muted" style="margin: 0.1rem 0;">
               <span data-feather="tag" class="align-text-bottom"></span>
-              {{ task.type|join:", " }}
-              {% if task.assignees %},
-              <span data-feather="user" class="align-text-bottom"></span>
-              {{ task.assignees|join:", " }}
+              {{ task.get_types|join:", " }}
+              {% if task.assignees %}
+              <span data-feather="user" class="align-text-bottom" style="margin-left: 0.2rem"></span>
+              {{ task.assignees }}
               {% endif %}
             </small>
           </span>
@@ -53,8 +52,12 @@
             </span>
           </div>
           {% endif %}
+          {% if task.subtasks.all %}
+          <div class="descriptionLink" style="display: flex; flex-direction: row; gap: 0.5rem;">
+            <span data-feather="arrow-right-circle" class="align-text-bottom" style="width: 20px; height: 20px; stroke-width: 1;"></span>
+          </div>
+          {% endif %}
         </label>
-        {% endif %}
       {% endfor %}
       <input type="submit" id="submitTasksBtn" class="w-100 btn btn-lg btn-primary" value="Submit tasks" style="margin-top: 1rem; max-width: 200px;" />
     </div>
@@ -103,6 +106,7 @@
       }
       .done {
         background-color: rgb(209, 231, 221);
+        border: 1px solid #e0cbcd;
       }
     </style>
   
@@ -114,14 +118,13 @@
         for(var i = 0; i < alerts.length; i++) {
           var alert = alerts[i];
           alert.classList.add('hidden');
-        }      var form = document.querySelector('#tasksForm');
+        } 
+        var form = document.querySelector('#tasksForm');
         var form_data = new FormData(form);
-        console.log(form_data);
 
         let objSerializedForm = {};
         let nextIsFinished = false;
         for (let [name, value] of form_data) {
-          console.log(name, value)
           if (name === "done") {
             nextIsFinished = true;
           }
