--- a/ratings/templates/ratings_evaluation.html
+++ b/ratings/templates/ratings_evaluation.html
@@ -1,11 +1,8 @@
 {% extends "base_generic.html" %}
 
-{% block content %}
+{% block title %}Ratings Overview{% endblock %}
 
-<div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pb-2 mb-3 border-bottom"
-     xmlns:task.done_datetime xmlns:task.done_datetime xmlns:task.done_datetime xmlns:task.done_datetime>
-    <h1 class="h2">Ratings Overview</h1>
-</div>
+{% block content %}
 
 <div style="width: 100%;">
     <div class="row d-flex align-items-center h-100">
