--- a/iaroapp/templates/index.html
+++ b/iaroapp/templates/index.html
@@ -1,5 +1,7 @@
 {% extends "base_generic.html" %}
 
+{% block title %}Welcome{% endblock %}
+
 {% block content %}
 
 <div class="alert alert-success hidden" role="alert">
