--- a/inventory/templates/inventory.html
+++ b/inventory/templates/inventory.html
@@ -1,10 +1,23 @@
 {% extends "base_generic.html" %}
 
+{% block title %}Inventory Update{% endblock %}
+
+{% block widgets %}
+<div class="dropdown">
+  <button class="btn btn-primary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+    {{ branch }}
+  </button>
+  <ul class="dropdown-menu">
+    {% for branch in branches %}
+    <li><a class="dropdown-item" href="?branch={{ branch }}">{{ branch }}</a></li>
+    {% endfor %}
+  </ul>
+</div>
+{% endblock %}
+
 {% block content %}
 
 <div class="list-group w-auto">
-
-  {% include "template_title.html" with title="Update Inventory" %}
 
   <div class="alert alert-danger hidden" role="alert">
     Submitting the inventory failed.
