--- a/inventory/templates/inventory_shopping.html
+++ b/inventory/templates/inventory_shopping.html
@@ -1,8 +1,8 @@
 {% extends "base_generic.html" %}
 
-{% block content %}
+{% block title %}Shopping List{% endblock %}
 
-{% include "template_title.html" with title="Shopping list" %}
+{% block content %}
 
 <div style="width: 100%;">
   <table class="table table-hover">
