--- a/tasks/templates/tasks_baking.html
+++ b/tasks/templates/tasks_baking.html
@@ -1,12 +1,22 @@
 {% extends "base_generic.html" %}
 
+{% block title %}Baking Plan{% endblock %}
+
+{% block widgets %}
+<div style="width: auto;">
+  <select id="weekday" class="form-select btn btn-primary" name="weekday">
+    {% for weekday_selection in weekdays %}
+    <option value="{{ weekday_selection }}" {% if weekday == weekday_selection %}selected{% endif %}>{{ weekday_selection }}</option>
+    {% endfor %}
+  </select>
+</div>
+{% endblock %}
+
 {% block content %}
 
 <form method="post" enctype="multipart/form-data">
   {% csrf_token %}
   {{ formset.management_form }}
-
-{% include "template_title.html" with title="Baking plan" %}
 
   <div style="width: 100%;">
     <table class="table table-hover table-striped">
