--- a/tasks/templates/tasks_add.html
+++ b/tasks/templates/tasks_add.html
@@ -1,8 +1,8 @@
 {% extends "base_generic.html" %}
 
-{% block content %}
+{% block title %}Add Tasks{% endblock %}
 
-{% include "template_title.html" with title="Add task" %}
+{% block content %}
 
 {% load crispy_forms_tags %}         
 <form method="post">
